crates/pg_syntax/tests/snapshots/postgres_regress/float8@26.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'NaN x'::float8;"
---
SelectStmt@0..23
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..22
    TypeCast@7..22
      AConst@7..14
        Sconst@7..14 "'NaN x'"
      Typecast@14..16 "::"
      TypeName@16..22
        Ident@16..22 "float8"
  Ascii59@22..23 ";"

