crates/pg_syntax/tests/snapshots/postgres_regress/float8@27.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ' INFINITY    x'::float8;"
---
SelectStmt@0..32
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..31
    TypeCast@7..31
      AConst@7..23
        Sconst@7..23 "' INFINITY    x'"
      Typecast@23..25 "::"
      TypeName@25..31
        Ident@25..31 "float8"
  Ascii59@31..32 ";"

