crates/pg_syntax/tests/snapshots/postgres_regress/float8@31.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'nan'::float8 / 'nan'::float8;"
---
SelectStmt@0..37
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..36
    AExpr@7..36
      TypeCast@7..20
        AConst@7..12
          Sconst@7..12 "'nan'"
        Typecast@12..14 "::"
        TypeName@14..20
          Ident@14..20 "float8"
      Whitespace@20..21 " "
      Ascii47@21..22 "/"
      Whitespace@22..23 " "
      TypeCast@23..36
        AConst@23..28
          Sconst@23..28 "'nan'"
        Typecast@28..30 "::"
        TypeName@30..36
          Ident@30..36 "float8"
  Ascii59@36..37 ";"

